--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">New Project Coming Soon<br />
+										<h2><a href="https://rpubs.com/Tburke719/Bellabeat">Bellabeat Case Study<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://rpubs.com/Tburke719/Bellabeat" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<p>After completing my Google Data Analytics course I was tasked with completing a case study on Bellabeat, a high-tech manufacturer of health based products for women.   </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://rpubs.com/Tburke719/Bellabeat" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
