--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
 									<header>
 										
 										<h2><a href="https://rpubs.com/Tburke719/Bellabeat">Bellabeat Case Study<br />
-										</a></h2>
+										</a>R Programming</h2>
 									</header>
-									<a href="https://rpubs.com/Tburke719/Bellabeat" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>After completing my Google Data Analytics course I was tasked with completing a case study on Bellabeat, a high-tech manufacturer of health based products for women.   </p>
+									<a href="https://rpubs.com/Tburke719/Bellabeat" class="image fit"><img src="images/Bellabeat.jpg" alt="" /></a>
+									<p>After completing my Google Data Analytics course I was tasked with completing a case study on Bellabeat, a high-tech manufacturer of health based products for women.</p>
+									
 									<ul class="actions special">
 										<li><a href="https://rpubs.com/Tburke719/Bellabeat" class="button">View Project</a></li>
 									</ul>
